--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
           {
             outline:none;
             padding: 10px;
-            width: 120px;
+            width: 100px;
             text-align: center;
-            height: 30px;
-            background: #EFEFEF;
+            height: 20px;
+            background: #fff;
             border: #fff;
           }
           .nabza2
