--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
           {
             outline:none;
             padding: 10px;
-            width: 100px;
+            width: 130px;
             text-align: center;
             height: 20px;
             background: #fff;
             border: #fff;
+            font-size: 20px;
+            color: #f00;
           }
           .nabza2
           {
@@ -63,8 +65,10 @@
           }
           a
           {
-            color:aqua;
+            color:#fff;
             font-size: 25px;
+            background: #f00;
+
           }
         </style>
     </head>
