--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p class="nabza2">I'm Programmer This Is My Website <br> The Programmer Bassem Website</p>
         <label>Phone Number & Whatsapp</label><br><br><br>
         <input type="text" value="01003713835"><br><br><br>
-        <a href="https://www.facebook.com/profile.php?id=100078540524685">The Facebook Page</a>
+        <a href="https://www.facebook.com/profile.php?id=100078540524685" target="_blank">The Facebook Page</a>
        <br><br><br>
        <hr>
        <br>
