--- a/index.html
+++ b/index.html
@@ -70,6 +70,42 @@
             background: #f00;
 
           }
+          /******بداية كود ازالة الخط تحت الرابط ********/
+        a:link, a:visited {
+        color: #fff;
+        background-color: #f00;
+        display: inline-block;
+        padding: 10px 20px;
+        border: 2px solid #f00;
+        text-decoration: none;
+        text-align: center;
+        font: 16px Arial, sans-serif;
+         }
+        a:hover, a:active {
+        background-color: #000000;
+        border-color: #fff;
+          }
+          a:link
+          {
+          text-decoration: none;
+          }
+          a:visited
+          {
+          text-decoration: none;
+          }
+          a:active
+          {
+          text-decoration: none;
+          }
+          a:hover
+          {
+          text-decoration: none;
+          }
+          a.forumlink:hover
+          {
+          text-decoration:none;
+          }
+          /******نهاية كود ازالة الخط تحت الرابط ********/
         </style>
     </head>
     <body>
