--- a/index.html
+++ b/index.html
@@ -81,9 +81,13 @@
         text-align: center;
         font: 16px Arial, sans-serif;
          }
-        a:hover, a:active {
-        background-color: #000000;
-        border-color: #fff;
+        a:hover, a:active 
+          {
+          background-color: #000000;
+          border-color: #000000;
+          color: rgb(51, 255, 0);
+          font-family: andalus;
+          font-size: 25px;
           }
           a:link
           {
@@ -106,6 +110,23 @@
           text-decoration:none;
           }
           /******نهاية كود ازالة الخط تحت الرابط ********/
+          .nabza2:hover, .nabza2:active 
+          {
+          background-color: #000000;
+          border-color: #000000;
+          color: rgb(51, 255, 0);
+          font-family: andalus;
+          font-size: 30px;
+          }
+          input:hover, input:active 
+          {
+          background-color: #000000;
+          border-color: #000000;
+          color: rgb(51, 255, 0);
+          font-family: andalus;
+          font-size: 25px;
+          width: 160px;
+          }
         </style>
     </head>
     <body>
