--- a/index.html
+++ b/index.html
@@ -8,6 +8,131 @@
         <link rel="shortcut icon" href="toplogo.png" type="image/x-icon" />
         <link rel="stylesheet" href="style.css">
         <style>
+            body {background: #000000;text-align: center;}
+          h1
+          {text-align:center;
+            color: #fff;
+            background-color: #f00;
+            margin: 0 auto;
+            padding: 10px;
+          }
+          hr { color: #EFEFEF; }
+          div 
+          {text-align: center;
+            color: #fff;
+            background: #f00;
+            margin:0;
+            padding: 10px 0;
+            font-size: 18px;
+          }
+          div:active,div:hover
+          {
+            background: rgb(208, 255, 0);
+            color: #000000;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',Verdana, sans-serif;
+          }
+          label 
+          {
+            color: #fff;
+            padding: 10px;
+            text-align: center;  
+            font-size: 30px;  
+            background: #f00;      
+            padding: 5px;
+          }
+          input
+          {
+            outline:none;
+            padding: 10px;
+            width: 130px;
+            text-align: center;
+            height: 20px;
+            background: #fff;
+            border: #fff;
+            font-size: 20px;
+            color: #f00;
+          }
+          .nabza2
+          {
+            font-size: 30px;
+            color: #fff;
+          }
+          h2
+          {
+            background: #f00;
+            font-size: 25px;
+            width: 300px;
+            color: #fff;
+            text-align: center;
+          }
+          .nabza
+          {
+            font-size: 50px;
+            background: #f00;
+            color: #fff;
+          }
+          a
+          {
+            color:#fff;
+            font-size: 25px;
+            background: #f00;
+
+          }
+        a:link, a:visited {
+        color: #fff;
+        background-color: #f00;
+        display: inline-block;
+        padding: 10px 20px;
+        border: 2px solid #f00;
+        text-decoration: none;
+        text-align: center;
+        font: 16px Arial, sans-serif;
+         }
+        a:hover, a:active 
+          {
+          background-color: #000000;
+          border-color: #000000;
+          color: rgb(51, 255, 0);
+          font-family: andalus;
+          font-size: 25px;
+          }
+          a:link
+          {
+          text-decoration: none;
+          }
+          a:visited
+          {
+          text-decoration: none;
+          }
+          a:active
+          {
+          text-decoration: none;
+          }
+          a:hover
+          {
+          text-decoration: none;
+          }
+          a.forumlink:hover
+          {
+          text-decoration:none;
+          }
+          .nabza2:hover, .nabza2:active 
+          {
+          background-color: #000000;
+          border-color: #000000;
+          color: rgb(51, 255, 0);
+          font-family: andalus;
+          font-size: 30px;
+          }
+          input:hover, input:active 
+          {
+          background-color: #000000;
+          border-color: #000000;
+          color: rgb(51, 255, 0);
+          font-family: andalus;
+          font-size: 25px;
+          width: 160px;
+          }
         </style>
     </head>
     <body>
