--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <head>
         <meta charset="utf-8"/>
          <meta name="discription" content="This Is Website"/>
-        <title>TPB</title>
+        <title>Bassem Ayman</title>
         <link rel="shortcut icon" href="toplogo.png" type="image/x-icon" />
         <link rel="stylesheet" href="style.css">
         <style>
-            body {background: #000000;text-align: center;}
+          body {background: #000000;text-align: center;}
           h1
           {text-align:center;
             color: #fff;
             background-color: #f00;
             margin: 0 auto;
             padding: 10px;
+          }
+          h1:active,h1:hover
+          {
+            background: #fff;
+            color: #000000;
           }
           hr { color: #EFEFEF; }
           div 
@@ -27,7 +32,7 @@
           }
           div:active,div:hover
           {
-            background: rgb(208, 255, 0);
+            background: rgb(255, 255, 255);
             color: #000000;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode',Verdana, sans-serif;
           }
@@ -39,6 +44,11 @@
             font-size: 30px;  
             background: #f00;      
             padding: 5px;
+          }
+          label:active,label:hover
+          {
+            background: #fff;
+            color: #000000;
           }
           input
           {
@@ -65,6 +75,11 @@
             color: #fff;
             text-align: center;
           }
+          h2:active,h2:hover
+          {
+            background-color: #fff;
+            color: #000000;
+          }
           .nabza
           {
             font-size: 50px;
@@ -75,26 +90,26 @@
           {
             color:#fff;
             font-size: 25px;
-            background: #f00;
+            background: rgb(0, 0, 0);
 
           }
-        a:link, a:visited {
+        .link1:link, .link1:visited {
         color: #fff;
-        background-color: #f00;
+        background-color: rgb(0, 0, 0);
         display: inline-block;
         padding: 10px 20px;
-        border: 2px solid #f00;
+        border: 1px solid #f00;
         text-decoration: none;
         text-align: center;
         font: 16px Arial, sans-serif;
          }
-        a:hover, a:active 
+        .link1:hover, .link1:active 
           {
-          background-color: #000000;
+          background-color: #ffffff;
           border-color: #000000;
-          color: rgb(51, 255, 0);
-          font-family: andalus;
-          font-size: 25px;
+          color: rgb(0, 0, 0);
+          font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+          font-size: 17px;
           }
           a:link
           {
@@ -118,20 +133,43 @@
           }
           .nabza2:hover, .nabza2:active 
           {
-          background-color: #000000;
+          background-color: #ffffff;
           border-color: #000000;
-          color: rgb(51, 255, 0);
+          color: rgb(0, 0, 0);
           font-family: andalus;
           font-size: 30px;
           }
           input:hover, input:active 
           {
-          background-color: #000000;
+          background-color: #ffffff;
           border-color: #000000;
-          color: rgb(51, 255, 0);
+          color: rgb(0, 0, 0);
           font-family: andalus;
           font-size: 25px;
           width: 160px;
+          }
+          img 
+          {
+            background: #000000;
+            border:10px solid #000000;
+            width: 50px;
+            height: 40px;
+          }
+          img:hover
+          {
+            width: 60px;
+            height: 50px;
+            background: #fff;
+          }
+          .nabza:hover,.nabza:active
+          {
+            background: #fff;
+            color: #000000;
+          }
+          hr:active,hr:hover
+          {
+            color: #f00;
+            background: #f00;
           }
         </style>
     </head>
@@ -144,7 +182,9 @@
         <p class="nabza2">I'm Programmer This Is My Website <br> The Programmer Bassem Website</p>
         <label>Phone Number & Whatsapp</label><br><br><br>
         <input type="text" value="01003713835"><br><br><br>
-        <a href="https://www.facebook.com/profile.php?id=100078540524685" target="_blank">The Facebook Page</a>
+        <a href="https://www.facebook.com/profile.php?id=100078540524685" target="_blank" class="link1">The Facebook Page</a>
+       <br><br><br>
+       <a href="mailto:arepasimayman91@gmail.com" class="link2"><img src="logo2.png" alt="Gmail" /></a>
        <br><br><br>
        <hr>
        <br>
