--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
         <link rel="stylesheet" href="style.css">
         <style>
 
+         body::-webkit-scrollbar {
+          /* عرض Scrollbar */
+          width: 15px;
+         }
+         body::-webkit-scrollbar-track {
+          /* تلوين منطقة التي يتحرك فيها Scroll */
+          background: rgb(0, 0, 0);
+         }
+         body::-webkit-scrollbar-thumb {
+          /* تغيير لون Scroll */
+          background-color: rgb(255, 255, 255);
+
+          /* تدوير أركان الإطار Scroll */
+          border-radius: 100px;
+
+          /* خاصة بحجم ونوع ولون اﻹطار Scroll */
+          border: 3px solid rgb(0, 0, 0);
+          }
+          
           body 
           {
             background: #000000;
