--- a/index.html
+++ b/index.html
@@ -1,96 +1,26 @@
 <!DOCTYPE html>
-<meta name = "viewport" content = "width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0"/>
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="discription" content="This Is Website"/>
-        <title>Bassem Ayman</title>
-        <link rel="shortcut icon" href="toplogo.png" type="image/x-icon" />
-        <link rel="stylesheet" href="style.css">
-        <style>
-         body::-webkit-scrollbar {
-          /* عرض Scrollbar */
-          width: 15px;
-         }
-         body::-webkit-scrollbar-track {
-          /* تلوين منطقة التي يتحرك فيها Scroll */
-          background: rgb(0, 0, 0);
-         }
-         body::-webkit-scrollbar-thumb {
-          /* تغيير لون Scroll */
-          background-color: rgb(255, 255, 255);
-
-          /* تدوير أركان الإطار Scroll */
-          border-radius: 100px;
-
-          /* خاصة بحجم ونوع ولون اﻹطار Scroll */
-          border: 3px solid rgb(0, 0, 0);
-          }
-          
-          body 
-          {
-            background: #000000;
-            text-align: center;
-            background-position:50% 50%;
-            background-repeat:no-repeat;
-          }
-          
-        </style>
-    </head>
-    <body>
-       <h1>I'm Bassem</h1> 
-       <br>
-       <hr> 
-        <br>
-        <p class="nabza">Brief summary</p>
-        <p class="nabza2">I'm Programmer This Is My Website <br> The Programmer Bassem Website</p>
-        <label>Phone Number & Whatsapp</label><br><br><br>
-        <input type="text" value="01003713835"><br><br><br>
-        <a href="https://www.facebook.com/profile.php?id=100078540524685" target="_blank" class="link1">The Facebook Page</a><br><br><br><a href="mailto:arepasimayman91@gmail.com" class="link2"><img src="logo2.png" alt="Gmail" /></a>
-       <br><br><br>
-       <hr>
-       <br>
-       <br>
-       <div>
-        Copyright &copy; 2023-2022 All Right Reserved To Bassem Ayman &reg; Team
-       </div>
-       <br>
-       <hr>
-       <br>
-       <br>
-       <br>
-       <table dir="rtl">
-        <caption>ملخص تعلم الرمجة في الشهرين الماضيين</caption>
-        <thead class="head">
-            <th>اللغة</th>
-            <th>الإكمال</th>
-            <th>النسبة</th>
-        </thead>
-        <tbody>
-          <tr class="tablebody">
-            <td>Html</td>
-            <td>كاملة</td>
-            <td>100%</td>
-          </tr>
-          <tr class="tablebody">
-            <td>Css</td>
-            <td>عالية </td>
-            <td>75%</td>
-          </tr>
-          <tr class="tablebody">
-            <td>C#</td>
-            <td>منخفضة</td>
-            <td>5%</td>
-          </tr>
-          <tr class="tablebody">
-            <td>C++</td>
-            <td>منخفضة</td>          
-            <td>3%</td>
-          </tr>
-        </tbody>
-       </table>
-       <br>
-       <br>
-       <br>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="discription" content="Hello, I'm Arabic Programmer My Name Is Bassem Ayman"/>
+    <title>Bassem Ayman</title>
+    <link rel="shortcut icon" href="images/logo.png" type="imgag/png" />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+    </style>
+</head>
+<body>
+    <br>
+    <br>
+<a href="#" target="_self"><img src="images/logo.png" alt="Bassem Ayman" /></a>
+    <nav class="nav2">
+        <a href="#"> Home</a>
+        <a href="pages/about.html"> About</a>
+        <a href="https://pasimayman91.github.io/page1/"> Blog</a>
+        <a href="#"> contact</a>
+        <a href="#"> contact</a>
+        <div class="animation start-home"></div>
+    </nav>
+</body>
 </html>
