--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <br>
     <br>
-<a href="#" target="_self"><img src="logo.png" alt="Bassem Ayman" /></a>
+<a href="https://pasimayman91.github.io/page1/" target="_self"><img src="logo.png" alt="Bassem Ayman" /></a>
     <nav class="nav2">
-        <a href="#"> Home</a>
+        <a href="https://pasimayman91.github.io/page1/"> Home</a>
         <a href="about.html"> About</a>
-        <a href="https://pasimayman91.github.io/page1/"> Blog</a>
+        <a href="#"> Blog</a>
         <a href="#"> contact</a>
         <a href="#"> contact</a>
         <div class="animation start-home"></div>
