--- a/about.html
+++ b/about.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
 <html>
     <head>
         <meta charset="utf-8">
@@ -8,7 +9,7 @@
         <style></style>
     </head>
     <body>
-    <a href="https://pasimayman91.github.io/page1/" target="_self"><img src="logo.png" alt="About Website"></a>   
+    <a href="pasimayman91.github.io/page1/" target="_self"><img src="logo.png" alt="About Website"></a>   
     <hr>
         <h1>About Website</h1>
         <br>
