--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <br>
     <br>
-<a href="https://pasimayman91.github.io/page1/" target="_self"><img src="logo.png" alt="Bassem Ayman" /></a>
+<a href="pasimayman91.github.io/page1/" target="_self"><img src="logo.png" alt="Bassem Ayman" /></a>
     <nav class="nav2">
-        <a href="https://pasimayman91.github.io/page1/"> Home</a>
+        <a href="pasimayman91.github.io/page1/"> Home</a>
         <a href="about.html"> About</a>
         <a href="#"> Blog</a>
         <a href="#"> contact</a>
