--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <br>
         <p>
             <br>
-            My name is Bassem. I am an Arabic programmer specializing in web design.<br> I have taken many courses and courses in many programming languages ​​like
+            My name is Bassem Ayman. I am an Arabic programmer specializing in web design.<br>Html & Css & JavaScript. I have taken many courses and courses in many programming languages ​like <br>
             I wish those who want to communicate with me to create a website for him, to go to the contact page<br> from the following link.<br>
             <br>
         </p>
