--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="about.html"> About</a>
         <a href="#"> Blog</a>
         <a href="#"> contact</a>
-        <a href="#"> contact</a>
+        <a href="https://www.facebook.com/profile.php?id=100078540524685">Facebook</a>
         <div class="animation start-home"></div>
     </nav>
 </body>
