--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <br>
     <br>
-<a href="pasimayman91.github.io/page1/" target="_self"><img src="logo.png" alt="Bassem Ayman" /></a>
+<a href="pasimayman91.github.io/page1/"><img src="logo.png" alt="Bassem Ayman" /></a>
     <nav class="nav2">
         <a href="pasimayman91.github.io/page1/"> Home</a>
         <a href="about.html"> About</a>
