--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <style></style>
     </head>
     <body>
-    <a href="pasimayman91.github.io/page1/" target="_self"><img src="logo.png" alt="About Website"></a>   
+    <a href="#"><img src="logo.png" alt="About Website"></a>   
     <hr>
         <h1>About Website</h1>
         <br>
