--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
 <html>
 <head>
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
     <meta charset="utf-8" />
     <meta name="discription" content="Hello, I'm Arabic Programmer My Name Is Bassem Ayman"/>
     <title>Bassem Ayman</title>
@@ -13,7 +13,7 @@
 <body>
     <br>
     <br>
-<a href="pasimayman91.github.io/page1/"><img src="logo.png" alt="Bassem Ayman" /></a>
+<a href="https://pasimayman91.github.io/page1/"><img src="logo.png" alt="Bassem Ayman" /></a>
     <nav class="nav2">
         <a href="pasimayman91.github.io/page1/"> Home</a>
         <a href="about.html"> About</a>
