--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
 <html>
     <head>
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
         <meta charset="utf-8">
         <meta name="description" content="About Website">
         <title>About</title>
@@ -9,7 +9,7 @@
         <style></style>
     </head>
     <body>
-    <a href="#"><img src="logo.png" alt="About Website"></a>   
+    <a href="https://pasimayman91.github.io/page1/"><img src="logo.png" alt="About Website"></a>   
     <hr>
         <h1>About Website</h1>
         <br>
