--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
 <a href=""><img src="logo.png" alt="Bassem Ayman" /></a>
     <nav class="nav2">
-        <a href="pasimayman91.github.io/page1/"> Home</a>
+        <a href="https://pasimayman91.github.io/page1/"> Home</a>
         <a href="about.html"> About</a>
         <a href="#"> Blog</a>
         <a href="#"> contact</a>
