--- a/about.html
+++ b/about.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0" />
+
+            <meta thhp-rquiv="x-UA-compatile" content="IE=edge,cheome=1">
+    <meta name="viewport" content="width=device-width, initial-scsle=1.0">
         <meta charset="utf-8">
         <meta name="description" content="About Website">
         <title>About</title>
