--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
     <br>
     <br>
-<a href=""><img src="logo.png" alt="Bassem Ayman" /></a>
+    <div>
+    <a href=""><img src="logo.png" alt="Bassem Ayman" /></a>
+</div>
     <nav class="nav2">
         <a href="https://pasimayman91.github.io/page1/"> Home</a>
         <a href="about.html"> About</a>
