--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta thhp-rquiv="x-UA-compatile" content="IE=edge,cheome=1">
-    <meta name="viewport" content="width=device-width, initial-scsle=1.0">
-    <meta charset="utf-8" />
-    <meta name="discription" content="Hello, I'm Arabic Programmer My Name Is Bassem Ayman"/>
-    <title>Bassem Ayman</title>
-    <link rel="shortcut icon" href="logo.png" type="imgag/png" />
-    <link rel="stylesheet" href="style.css" />
-    <style>
-    </style>
-</head>
-<body>
-    <br>
-    <br>
-    <div>
-    <a href=""><img src="logo.png" alt="Bassem Ayman" /></a>
-</div>
-    <nav class="nav2">
-        <a href="https://pasimayman91.github.io/page1/"> Home</a>
-        <a href="about.html"> About</a>
-        <a href="#"> Blog</a>
-        <a href="#"> contact</a>
-        <a href="https://www.facebook.com/profile.php?id=100078540524685">Facebook</a>
-        <div class="animation start-home"></div>
-    </nav>
-</body>
-</html>
+    <head>
+        <meta thhp-rquiv="x-UA-compatile" content="IE=edge,cheome=1">
+        <meta name="viewport" content="width=device-width, initial-scsle=1.0"> 
+        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+        <title>الإسلام</title>
+        <link href="style.css" rel="stylesheet" type="text/css"/>
+        <link rel="icon" href="pagelogo.png" type="icon/image/png">
+    </head>
+        <body>
+        <a href="#" target="_self"><img src="pagelogo.png" alt="logo" class="pagelogo"></a>
+          <br><br><br><br><br>
+             <a href="#" class="link">معاني الاسماء</a>
+             <br>
+             <br>
+             <a href="#" class="link">السيرة النبوية</a>
+             <br>
+             <br>
+             <br>
+             <div class="footer">
+                Copyright &copy All Right Reserved To Bassem Ayman 2023 <img src="Butu Altaqnie (3).jpg" alt="Footer" class="foteer">
+             </div>
+        </body>
+        </html>
