--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     </head>
         <body>
         <a href="#" target="_self"><img src="pagelogo.png" alt="logo" class="pagelogo"></a>
-          <br><br><br><br><br>
-             <a href="#" class="link">معاني الاسماء</a>
+          <br><br><br><br><br><br>
+             <a href="page1.html" class="link">معاني الاسماء</a>
              <br>
              <br>
-             <a href="#" class="link">السيرة النبوية</a>
              <br>
              <br>
              <br>
              <div class="footer">
                 Copyright &copy All Right Reserved To Bassem Ayman 2023 <img src="Butu Altaqnie (3).jpg" alt="Footer" class="foteer">
              </div>
+             <br>
         </body>
         </html>
