--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <body>
         <a href="#" target="_self"><img src="pagelogo.png" alt="logo" class="pagelogo"></a>
           <br><br><br><br><br><br>
-             <a href="page1.html" class="link">معاني الاسماء</a>
+             <a href="page1.html" class="link">السيرة النبوية</a>
              <br>
              <br>
              <br>
