--- a/page1.html
+++ b/page1.html
@@ -3,8 +3,7 @@
     <head>
         <meta thhp-rquiv="x-UA-compatile" content="IE=edge,cheome=1">
         <meta name="viewport" content="width=device-width, initial-scsle=1.0"> 
-        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <title>الإسلام- إختيار</title>
+        <title>السيرة النبوية | إختيار</title>
         <link href="page1.css" rel="stylesheet" type="text/css"/>
         <link rel="icon" href="pagelogo.png" type="icon/image/png">
     </head>
@@ -19,10 +18,7 @@
          <br>
          <br>
          <br>
-         <a href="" target="_self" class="link1">تحميل كتاب السيرة النبوية PDF</a>
-         <br>
-         <br>
-         <br><br><br>
+         <a href="" target="_self" class="link1">تحميل كتاب السيرة النبوية PDF</a><br><br>
          <div class="footer">
             Copyright &copy All Right Reserved To Bassem Ayman 2023 <img src="Butu Altaqnie (3).jpg" alt="Footer" class="foteer">
          </div>
