--- a/page1.html
+++ b/page1.html
@@ -14,11 +14,11 @@
         <br>
         <br>
         <br>
-         <a href="" target="_self" class="link1">السيرة النبوية قراءة</a>
+         <a href="" target="_self" class="link1">قراءة السيرة النبوية</a>
          <br>
          <br>
          <br>
-         <a href="" target="_self" class="link1">تحميل كتاب السيرة النبوية PDF</a><br><br>
+         <a href="page1-2.html" target="_self" class="link1">تحميل ومعاينة كتاب السيرة النبوية PDF</a><br><br>
          <div class="footer">
             Copyright &copy All Right Reserved To Bassem Ayman 2023 <img src="Butu Altaqnie (3).jpg" alt="Footer" class="foteer">
          </div>
