--- a/page1-2-1.html
+++ b/page1-2-1.html
@@ -4,7 +4,7 @@
         <meta thhp-rquiv="x-UA-compatile" content="IE=edge,cheome=1">
         <meta name="viewport" content="width=device-width, initial-scsle=1.0"> 
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <title>السيرة النبوية | معاينة الكتاب</title>
+        <title>السيرة النبوية | معاينة و تحميل الكتاب</title>
         <link href="page1-2-1.css" rel="stylesheet" type="text/css"/>
         <link rel="icon" href="pagelogo.png" type="icon/image/png">
     </head>
@@ -13,9 +13,8 @@
         <br>
         <br><br>
         <br>
-        <h1>معاينة الكتاب</h1>
-        <embed src="sera.pdf">
-            <br><hr><br><br><br>
+            <a download href="https://foulabook.com/storage/book/%D8%A7%D9%84%D8%B3%D9%8A%D8%B1%D8%A9%20%D8%A7%D9%84%D9%86%D8%A8%D9%88%D9%8A%D8%A9_21911_Foulabook.com_.pdf" target="_self" class="link1">تحميل ومعاينة الكتاب</a>
+            <br><br>
             <div class="footer">
                 Copyright &copy All Right Reserved To Bassem Ayman 2023 <img src="Butu Altaqnie (3).jpg" alt="Footer" class="foteer">
              </div>
