--- a/page1-2.html
+++ b/page1-2.html
@@ -14,12 +14,8 @@
         <br>
         <br>
         <br>
-        <br>
-         <a href="page1-2-1.html" target="_self" class="link1">معاينة الكتاب</a>
-         <br>
-         <br>
-         <br>
-         <a href="https://www.noor-book.com/book/internal_download/4207d070107a2ffad858377a942e9e88500b7407/3/7a1d822bcec33768e0300d81b7ed4805" target="_self" class="link1">تحميل الكتاب</a><br><br>
+        <br><br>
+         <a href="page1-2-1.html" target="_self" class="link1">معاينة و تحميل الكتاب</a><br><br><br><br><br><br>
          <div class="footer">
             Copyright &copy All Right Reserved To Bassem Ayman 2023 <img src="Butu Altaqnie (3).jpg" alt="Footer" class="foteer">
          </div>
