--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,7 @@
         <br>
         <br>
         <br>
-         <a href="" target="_self" class="link1">قراءة السيرة النبوية</a>
+         <a href="page1-2-2.html" target="_self" class="link1">قراءة السيرة النبوية</a>
          <br>
          <br>
          <br>
