--- a/page1-2-2.html
+++ b/page1-2-2.html
@@ -3,6 +3,7 @@
     <head>
         <meta thhp-rquiv="x-UA-compatile" content="IE=edge,cheome=1">
         <meta name="viewport" content="width=device-width, initial-scsle=1.0"> 
+        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <title>السيرة النبوية | قراءة</title>
         <link href="page1-2-2.css" rel="stylesheet" type="text/css"/>
         <link rel="icon" href="pagelogo.png" type="icon/image/png">
@@ -22,7 +23,6 @@
 
             </ul>
         </div> 
-        <hr>
         <br>
         <h1>مقدمة عن سيرة النبي صلى الله عليه وسلم </h1>
         <p>
