--- a/page1-2-2.html
+++ b/page1-2-2.html
@@ -16,6 +16,7 @@
         <br>
         <br>
         <br>
+        <div class="all">
         <div class="inf">
             <h1>السيرة النبوية الشريفة كاملة مكتوبة</h1>
             <ul>
@@ -57,5 +58,6 @@
         <div class="footer">
             Copyright &copy All Right Reserved To Bassem Ayman 2023 <img src="Butu Altaqnie (3).jpg" alt="Footer" class="foteer">
          </div>  
-        </footer>   
+        </footer> 
+    </div>  
     </body>
