--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="320904.png" />
     <title>Amar Ayman</title>
     <style>
+        body {
+            background-color: #000;
+        }
+
         img {
             float: right;
             width: 150px;
@@ -29,6 +33,8 @@
             background-color: black;
             border-radius: 5px;
             padding: 10px;
+            width: 370px;
+            margin: 0 auto;
             box-shadow: 5px 5px 15px #ffff00;
             transition: all 1s;
         }
@@ -62,7 +68,7 @@
 
         h1 {
             text-decoration: none;
-            color: #000;
+            color: rgb(255, 255, 255);
             text-align: center;
             transition: all 0.5s;
             font-size: 50px;
@@ -82,7 +88,7 @@
         }
 
         h1:hover {
-            color: #f00;
+            color: #ffff00;
             transition: all 0.5s;
         }
 
@@ -97,14 +103,36 @@
             font-size: 25px;
             color: #ffff00;
         }
+
+        .logo {
+            width: 100px;
+            height: 100px;
+            display: flex;
+        }
+
+
+        .logo {
+            margin: 0 auto;
+            margin-top: 10px;
+        }
+
+        footer {
+            text-align: center;
+            font-size: 20px;
+            color: #fff;
+            font-family: Footlight MT Light;
+        }
     </style>
 </head>
 
 <body>
     <div>
-        <a href="#" class="logo">
-            <h1>أسعار الكلاب</h1>
+        <a href="https://pasimayman91.github.io/page1/" class="logo">
+            <h1 class="logo">أسعار الكلاب</h1>
+            <img src="logo.png" alt="Logo" class="logo">
         </a>
+        <br>
+        <br>
     </div>
     <br><br><br>
     <br<br><br>
@@ -122,6 +150,29 @@
                 </a>
             </a>
         </div>
+        <br>
+        </div>
+        <br><br><br>
+        <br<br><br>
+            <div class="content">
+                <a href="#">
+                    <img src="jpg.jpg"><br>
+                    <br><br><br><br>
+                    <h2>كلب الهاسكى</h2>
+                    <h3>يبدأ سعرة من 3500 : 11000 جنية مصري</h3>
+                    <h4>AmarAyman.com</h4>
+                    <br>
+                    <br>
+                    <a href="#" class="read">
+                        <h1 class="read">إقرأ المزيد</h1>
+                    </a>
+                </a>
+            </div>
+            <br>
+            <br><br><br><br><br>
+            <footer>
+                CopyRight &copy; Bassem Ayman 2023
+            </footer>
 </body>
 
 </html>
