--- a/index.html
+++ b/index.html
@@ -96,12 +96,14 @@
             text-align: center;
             font-size: 25px;
             color: #fff;
+            transition: all 0.5s;
         }
 
         .read:hover {
             text-align: center;
-            font-size: 25px;
+            font-size: 30px;
             color: #ffff00;
+            transition: all 0.5s;
         }
 
         .logo {
@@ -145,7 +147,7 @@
                 <h4>AmarAyman.com</h4>
                 <br>
                 <br>
-                <a href="#" class="read">
+                <a href="dog1-informations.html" class="read">
                     <h1 class="read">إقرأ المزيد</h1>
                 </a>
             </a>
