--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
             font-size: 50px;
         }
 
+
+
         h4 {
             text-align: right;
             margin-top: 50px;
@@ -124,11 +126,32 @@
             color: #fff;
             font-family: Footlight MT Light;
         }
+
+        .contcnt {
+            animation-duration: 3s;
+            animation-name: bouncing;
+        }
+
+        @keyframes bouncing {
+            0% {
+                transform: scale(0.1);
+                opacity: 0;
+            }
+
+            60% {
+                transform: scale(1.2);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
     </style>
 </head>
 
 <body>
-    <div>
+    <div class="contcnt">
         <a href="https://pasimayman91.github.io/page1/" class="logo">
             <h1 class="logo">أسعار الكلاب</h1>
             <img src="logo.png" alt="Logo" class="logo">
