--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
             margin-right: 20px;
         }
 
-        hr {
-            background-color: #000;
-            width: 500px;
-            float: right;
-        }
 
         a {
             text-decoration: none;
@@ -147,6 +142,143 @@
                 transform: scale(1);
             }
         }
+
+        /* بداية لوحة تسجيل الدخول */
+        body {
+            background: #000;
+        }
+
+        h1 {
+            background: rgb(255, 255, 255);
+            color: #000;
+            padding: 10px;
+            font-size: 25px;
+            margin: 5px;
+            margin-left: 0;
+            margin-right: 0;
+            border-radius: 5px;
+        }
+
+        p {
+            background: rgb(0, 0, 0);
+            color: #fff;
+            padding: 10px;
+            font-size: 20px;
+            margin: 5px;
+            margin-left: 0;
+            margin-right: 0;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+        header h1 {
+            text-align: center;
+            position: static;
+            border-radius: 5px;
+            border-radius: 5px;
+        }
+
+        form {
+            background-color: black;
+            width: 530px;
+            border-radius: 5px;
+            margin-left: 425px;
+            margin-right: 425px;
+            border: 5px solid #fff;
+            box-shadow: 5px 5px 12px 12px #ffffff;
+
+        }
+
+        .user {
+            margin-top: 20px;
+        }
+
+
+        label {
+            color: #fff;
+            margin-left: 30px;
+            font-size: 20px;
+            margin-right: 20px;
+        }
+
+        input {
+            background-color: #fff;
+            border: 2px solid rgb(0, 0, 0);
+            border-radius: 5px;
+            padding: 10px;
+            width: 250px;
+            margin-bottom: 15px;
+            color: #000;
+            user-select: all;
+        }
+
+        .button {
+            margin-left: 25px;
+            background-color: #fff;
+            border-radius: 5px;
+            color: #000;
+            border: black;
+            padding: 10px;
+            width: 225px;
+            transition: all 0.5s;
+            cursor: pointer;
+        }
+
+        .button:hover {
+            background-color: rgb(214, 208, 208);
+            transition: all 0.5s;
+        }
+
+        .moh {
+            margin-bottom: 40px;
+        }
+
+        .color {
+            width: 275px;
+            padding: 15px;
+        }
+
+        .email {
+            background-color: rgb(255, 255, 255);
+        }
+
+        .Username {
+            background-color: #fff;
+            margin-top: 20px;
+        }
+
+        .moh {
+            background-color: #ddd;
+        }
+
+        .post1,
+        .post2 {
+            color: #ffff00;
+            text-decoration: underline;
+            text-decoration-color: #f00;
+            text-decoration-style: 2px solid;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4,
+        p,
+        .read {
+            background-color: black;
+        }
+
+        /* نهاية لوحة تسجيل الدخول */
+        .logo {
+            font-size: 50px;
+            color: #fff;
+        }
+
+        h5 {
+            text-align: center;
+            color: #fff;
+            font-size: 25px;
+        }
     </style>
 </head>
 
@@ -156,9 +288,10 @@
             <h1 class="logo">أسعار الكلاب</h1>
             <img src="logo.png" alt="Logo" class="logo">
         </a>
-        <br>
+        <br><br><br>
         <br>
     </div>
+    <h5>هل لا تملك حساب ؟ <a href="#post1" class="post2">تسجيل دخول</a></h5>
     <br><br><br>
     <br<br><br>
         <div class="content">
@@ -194,8 +327,38 @@
                 </a>
             </div>
             <br>
-            <br><br><br><br><br>
+            <br><br><br><br>
+            <hr><br><br><br>
             <footer>
+                <form method="post" name="Login">
+                    <h5>هل لا تملك حساب ؟ <a href="#post1" class="post1">تسجيل دخول</a></h5>
+                    <div>
+                        <label class="user" id="post1">Username</label>
+                        <input type="text" name="Username" placeholder="Username" class="Username" required>
+                    </div>
+                    <br>
+                    <div>
+                        <label>&nbsp;Password</label>
+                        <input type="password" name="Password" placeholder="Password" minlength="6" maxlength="15"
+                            required>
+                    </div>
+                    <br>
+                    <div>
+                        <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;E-mail</label>
+                        <input type="email" placeholder="E-mail" name="email" class="email" value="@gmail.com" required>
+                    </div>
+
+                    <br>
+                    <input type="reset" class="button"
+                        onclick="alert('The data will be reset and you will have to enter it again')">
+                    <input type="submit" class="button" onclick="alert('Data sent successfully')">
+                    <br>
+                </form>
+                <br>
+                <br>
+                <br>
+                <hr>
+                <br>
                 CopyRight &copy; Bassem Ayman 2023
             </footer>
 </body>
