--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
             <br>
             <hr>
             <br>
+            <footer>
             CopyRight &copy; Bassem Ayman 2023
         </footer>
 </body>
