--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         }
 
         nav {
-            background-color: #000;
             float: left;
             margin-top: 10px;
+            position: fixed;
         }
 
         li {
@@ -185,8 +185,8 @@
             <hr>
             <br>
             <footer>
-            CopyRight &copy; Bassem Ayman 2023
-        </footer>
+                CopyRight &copy; Bassem Ayman 2023
+            </footer>
 </body>
 
 </html>
